[package]
name = "cargo-git"
version = "0.6.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT"
description = "An opinionated helper command to use git with cargo. This does not replace the git command but should be used in conjunction with."
repository = "https://github.com/cecton/cargo-git"
homepage = "https://github.com/cecton/cargo-git"
readme = "README.md"
keywords = ["git", "cargo", "opinionated", "workflow"]
categories = ["development-tools::cargo-plugins"]

[badges]
is-it-maintained-issue-resolution = { repository = "cecton/gptman" }
is-it-maintained-open-issues = { repository = "cecton/gptman" }

[dependencies]
structopt = "0.3.16"
git2 = "0.11.0"
regex = "1.3.9"
dirs = "3.0.1"
users = "0.10.0"
git2_credentials = "0.4.0"
bitvec = "0.18.1"
