[package]
name = "git-tools"
version = "0.1.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT"
description = "Git subcommands to help with your workflow."
repository = "https://github.com/cecton/git-tools"
homepage = "https://github.com/cecton/git-tools"
readme = "README.md"
keywords = ["git", "workflow", "merge", "rebase", "try-merge"]
categories = ["command-line-utilities"]

[[bin]]
name = "git-try-merge"
path = "src/git-try-merge.rs"
doc = false

[[bin]]
name = "git-fork"
path = "src/git-fork.rs"
doc = false

[[bin]]
name = "git-push2"
path = "src/git-push2.rs"
doc = false

[[bin]]
name = "git-delete"
path = "src/git-delete.rs"
doc = false

[dependencies]
git2 = "0.13.0"
dirs = "3.0.1"
users = "0.10.0"
git2_credentials = "0.7.0"
bitvec = "0.17.4"
structopt = "0.3.17"
globset = "0.4.6"
