[package]
name = "common"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "cecton/gptman" }
is-it-maintained-open-issues = { repository = "cecton/gptman" }

[dependencies]
git2 = "0.11.0"
dirs = "3.0.1"
users = "0.10.0"
git2_credentials = "0.4.0"
bitvec = "0.17.4"
