[package]
name = "git-fork"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT"
description = "An opinionated helper command to use git with cargo. This does not replace the git command but should be used in conjunction with."
repository = "https://github.com/cecton/cargo-git"
homepage = "https://github.com/cecton/cargo-git"
readme = "README.md"
keywords = ["git", "cargo", "opinionated", "workflow"]
categories = ["development-tools::cargo-plugins"]

[badges]
is-it-maintained-issue-resolution = { repository = "cecton/gptman" }
is-it-maintained-open-issues = { repository = "cecton/gptman" }

[dependencies]
common = { path = "../common" }
structopt = "0.3.17"
